<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.leagues.StandingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leagues_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorAppBar"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:fontFamily="@font/dana_bold"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/material_text_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/english_premier_league" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_right_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_point"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/point"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leagues_toolbar" />

    <TextView
        android:id="@+id/tv_difference"
        android:layout_width="38dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/difference"
        app:layout_constraintStart_toEndOf="@+id/tv_point"
        app:layout_constraintTop_toBottomOf="@+id/leagues_toolbar" />

    <TextView
        android:id="@+id/tv_lose"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/lose"
        app:layout_constraintStart_toEndOf="@+id/tv_difference"
        app:layout_constraintTop_toBottomOf="@+id/leagues_toolbar" />

    <TextView
        android:id="@+id/tv_draw"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/draw"
        app:layout_constraintStart_toEndOf="@+id/tv_lose"
        app:layout_constraintTop_toBottomOf="@+id/leagues_toolbar" />

    <TextView
        android:id="@+id/tv_win"
        android:layout_width="26dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/win"
        app:layout_constraintStart_toEndOf="@+id/tv_draw"
        app:layout_constraintTop_toBottomOf="@+id/leagues_toolbar" />

    <TextView
        android:id="@+id/tv_match"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/match"
        app:layout_constraintStart_toEndOf="@+id/tv_win"
        app:layout_constraintTop_toBottomOf="@+id/leagues_toolbar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBlack10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_point" />

<!--    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/erv_standings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />-->

</androidx.constraintlayout.widget.ConstraintLayout>